# heimdal

./: .gitignore  .gitmodules  .stowrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTINGUISHED_ENGINEER_REVIEW.md  MIGRATION_PLAN.md  Makefile  README.md  README.md.backup-20260207  VOUCHED.td  install.sh  session-ses_3c50.md
.claire/worktrees/bold-ray-bgqu/src/commands/: diff.rs  rollback.rs
.github/: BRANCH_PROTECTION.md  RELEASE.md  RELEASE_STRATEGY.md  RELEASE_v1.0.0.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/apk/: install-apk.sh
.github/aur/: PKGBUILD  PKGBUILD-bin
.github/debian/: install-deb.sh
.github/homebrew/: heimdal.rb
.github/rpm/: install-rpm.sh
.github/workflows/: ci.yml  comprehensive-tests.yml  deb-package.yml  notify-repos.yml  packages.yml  release.yml  rust-tests.yml  vouch-check-issue.yml  vouch-check-pr.yml  vouch-manage.yml
.opencode/plans/: 2026-05-12-codebase-cleanup-design.md  2026-05-12-codebase-cleanup-implementation.md
Formula/: heimdal.rb
docs/: ARCHITECTURE.md  MODULE_GUIDE.md  PACKAGE_DATABASE.md  README.md  STATE_MANAGEMENT.md
docs/dev/: RELEASE.md  TESTING.md
examples/: full.yaml  minimal.yaml  multi-platform.yaml
src/: cli.rs  config.rs  error.rs  git.rs  hooks.rs  import.rs  lib.rs  lock.rs  main.rs  packages.rs  profile.rs  secrets.rs  state.rs  symlink.rs  templates.rs  utils.rs
src/commands/: apply.rs  autosync.rs  commit.rs  diff.rs  import.rs  init.rs  key.rs  mod.rs  packages.rs  profile.rs  rollback.rs  secret.rs  state.rs  status.rs  sync.rs  template.rs  validate.rs  wizard.rs
src/commands/history/: mod.rs  record.rs  rekey.rs  search.rs  shell_init.rs  sync.rs
src/commands/state/: conflict.rs  drift.rs  lock.rs  migration.rs  mod.rs
src/config/: conditions.rs  loader.rs  mod.rs  profile.rs  schema.rs
src/crypto/: kdf.rs  mod.rs
src/git/: commit.rs  messages.rs  mod.rs  sync.rs  tracking.rs
src/history/: cache.rs  mod.rs  shell.rs  store.rs
src/hooks/: mod.rs
src/import/: chezmoi.rs  dotbot.rs  homesick.rs  mod.rs  stow.rs  yadm.rs
src/key/: backup.rs  mod.rs
src/package/: apk.rs  apt.rs  database.rs  dependencies.rs  dnf.rs  groups.rs  homebrew.rs  hooks.rs  manager.rs  manager_base.rs  mapper.rs  mas.rs  mod.rs  pacman.rs  profiles.rs  suggestions.rs  versions.rs
src/package/database/: cache.rs  core.rs  loader.rs  mod.rs
src/profile/: mod.rs  operations.rs  templates.rs
src/secrets/: mod.rs  store.rs
src/state/: conflict.rs  lock.rs  mod.rs  versioned.rs
src/symlink/: conflict.rs  linker.rs  mod.rs  stow.rs
src/sync/: cron.rs  mod.rs
src/templates/: engine.rs  mod.rs  variables.rs
src/utils/: error.rs  logger.rs  macros.rs  mod.rs  os.rs  prompt.rs
src/wizard/: generator.rs  mod.rs  package_detector.rs  prompts.rs  scanner.rs
tests/: integration_test.rs  test_apply.rs  test_autosync.rs  test_basic.rs  test_command_locking.rs  test_config.rs  test_git_commands.rs  test_import.rs  test_init.rs  test_lock.rs  test_packages.rs  test_profile.rs  test_profiles.rs  test_secret.rs  test_secrets.rs  test_state.rs  test_state_lock.rs  test_status.rs  test_template.rs  test_templates.rs  test_utility_commands.rs  test_utils.rs  test_validate.rs  test_wizard.rs
tests/cli/: mod.rs  test_apply.rs  test_init.rs  test_packages.rs  test_profile.rs  test_state.rs  test_validation.rs
tests/common/: mod.rs
tests/comprehensive/: .gitignore  run-all-tests.sh
tests/comprehensive/docker/: alpine.Dockerfile  arch.Dockerfile  fedora.Dockerfile
tests/comprehensive/lib/: github-issue.sh  report-generator.sh  test-lib.sh
tests/comprehensive/phases/: phase1-init.sh  phase10-autosync.sh  phase11-import.sh  phase12-hooks.sh  phase13-edge-cases.sh  phase2-config.sh  phase3-symlinks.sh  phase4-packages.sh  phase5-git.sh  phase6-templates.sh  phase7-secrets.sh  phase8-state.sh  phase9-rollback.sh
tests/helpers/: fixtures.rs  git.rs  mod.rs
