[package]
name = "heimdal"
version = "1.0.0"
edition = "2021"
authors = ["Aleem Isiaka"]
description = "A universal dotfile and system configuration manager"
license = "MIT"
repository = "https://github.com/limistah/heimdal"
homepage = "https://github.com/limistah/heimdal"
documentation = "https://github.com/limistah/heimdal#readme"
readme = "README.md"
keywords = ["dotfiles", "configuration", "package-manager", "stow", "cli"]
categories = ["command-line-utilities", "config", "development-tools"]
rust-version = "1.70"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Configuration & serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Terminal colors & formatting
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# File system operations
walkdir = "2.5"
glob = "0.3"

# Path manipulation
shellexpand = "3.1"

# Lazy static initialization
once_cell = "1.20"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5.0"

# String similarity for fuzzy matching
strsim = "0.11"
fuzzy-matcher = "0.3"

# System information
hostname = "0.3"
whoami = "1.5"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Hashing for checksums
md5 = "0.7"

# Regex for template engine
regex = "1.10"

# Secret management
keyring = { version = "3.2", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3.8"
