[package]
name = "heimdal"
version = "3.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aleem Isiaka"]
license = "MIT"
description = "Universal dotfile and system configuration manager"
repository = "https://github.com/limistah/heimdal"
homepage = "https://github.com/limistah/heimdal"
keywords = ["dotfiles", "configuration", "package-manager", "stow", "cli"]
categories = ["command-line-utilities", "config", "development-tools"]

[[bin]]
name = "heimdal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
walkdir = "2.5"
glob = "0.3"
shellexpand = "3.1"
dirs = "5.0"
hostname = "0.3"
whoami = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.20"
keyring = { version = "3.2", features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
